force-app/main/default/objects/leaseworks__List_of_Investors__c/leaseworks__List_of_Investors__c.object-meta.xml
<CustomObject>
    <label>Participating Investor</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participating Investors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>