force-app/main/default/objects/leaseworks__List_of_Investors__c/fields/leaseworks__Description__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>