force-app/main/default/objects/leaseworks__List_of_Investors__c/fields/leaseworks__Initial_Bid_mm__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Initial_Bid_mm__c</fullName>
    <label>Initial order ($mm)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>