force-app/main/default/objects/leaseworks__List_of_Investors__c/fields/leaseworks__Investor_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Investor_Type__c</fullName>
    <label>Investor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic Global Fund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>