force-app/main/default/objects/leaseworks__List_of_Investors__c/fields/leaseworks__Principal_mm__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Principal_mm__c</fullName>
    <formula>leaseworks__Issuance_LP__r.leaseworks__Principal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Principal ($mm)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>