force-app/main/default/objects/leaseworks__List_of_Investors__c/fields/leaseworks__Trx_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Trx_Date__c</fullName>
    <formula>leaseworks__Issuance_LP__r.leaseworks__Issuance_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trx Date</label>
    <type>Date</type>
</CustomField>